Fix for printing - Don't cut off cards

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -204,6 +204,8 @@ hr {
     /* Tarot vertical 66% dimensions */
     width: 4.2in;
     height: 7.2in;
+    page-break-inside: avoid;
+    break-inside: avoid;
   }
 
   .text-main {
